manifests/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viulumeri-ingress
  namespace: viulumeri-staging
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
    ingressClassName: nginx
    tls:
      - hosts:
          - staging.viulumeri.fi
        secretName: viulumeri-staging-tls
    rules:
      - host: staging.viulumeri.fi
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: viulumeri
                  port:
                    number: 80
